@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2023 Eurotech and/or its affiliates and others
+ * Copyright (c) 2021, 2026 Eurotech and/or its affiliates and others
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -21,6 +21,7 @@ import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.fail;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
@@ -63,7 +64,6 @@ import org.eclipse.kura.core.testutil.requesthandler.Transport.MethodSpec;
 import org.eclipse.kura.crypto.CryptoService;
 import org.eclipse.kura.util.wire.test.WireTestUtil;
 import org.junit.BeforeClass;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
@@ -78,7 +78,6 @@ import org.osgi.service.cm.ConfigurationAdmin;
 import com.eclipsesource.json.Json;
 import com.eclipsesource.json.JsonValue;
 
-@Ignore
 @RunWith(Parameterized.class)
 public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
 
@@ -110,11 +109,11 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
 
         whenRequestIsPerformed(new MethodSpec("GET"), "/snapshots");
 
-        thenResponseCodeIs(500);
+        thenResponseCodeIs(400);
     }
 
     @Test
-    public void testListFactoryComponentsPidsEmpty() throws KuraException {
+    public void testListFactoryComponentsPidsEmpty() {
         givenMockGetFactoryComponentPidsReturnEmpty();
 
         whenRequestIsPerformed(new MethodSpec("GET"), "/factoryComponents");
@@ -134,7 +133,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testListConfigurableComponentsPidsEmpty() throws KuraException {
+    public void testListConfigurableComponentsPidsEmpty() {
         givenMockGetConfigurableComponentPidsReturnEmpty();
 
         whenRequestIsPerformed(new MethodSpec("GET"), "/configurableComponents");
@@ -261,6 +260,17 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
+    public void testGetShortProperty() throws KuraException {
+        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.SHORT, (short) 123);
+
+        whenRequestIsPerformed(new MethodSpec("GET"), "/configurableComponents/configurations");
+
+        thenRequestSucceeds();
+        thenTestPropertyTypeIs(Json.value("SHORT"));
+        thenTestPropertyValueIs(Json.value(123));
+    }
+
+    @Test
     public void testGetLongProperty() throws KuraException {
         givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.LONG, 123L);
 
@@ -274,8 +284,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     @Test
     public void testReturnPlaceholderInsteadOfEncryptedPassword() throws KuraException {
         givenEncryptedPassword("foobar");
-        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.PASSWORD,
-                new Password(this.encryptedPassword));
+        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.PASSWORD, new Password(this.encryptedPassword));
 
         whenRequestIsPerformed(new MethodSpec("GET"), "/configurableComponents/configurations");
 
@@ -287,8 +296,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     @Test
     public void testReturnNoValueForMissingPasswordProperty() throws KuraException {
         givenEncryptedPassword("foobar");
-        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.PASSWORD,
-                null);
+        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.PASSWORD, null);
 
         whenRequestIsPerformed(new MethodSpec("GET"), "/configurableComponents/configurations");
 
@@ -298,11 +306,9 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
 
     @Test
     public void testGetSnapshotReturnsUnencryptedPassword() throws KuraException {
-        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.PASSWORD,
-                new Password("foobar".toCharArray()));
+        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.PASSWORD, new Password("foobar".toCharArray()));
 
-        whenRequestIsPerformed(new MethodSpec("POST"), "/snapshots/byId",
-                "{\"id\":1}");
+        whenRequestIsPerformed(new MethodSpec("POST"), "/snapshots/byId", "{\"id\":10000}");
 
         thenRequestSucceeds();
         thenTestPropertyTypeIs(Json.value("PASSWORD"));
@@ -412,6 +418,17 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
+    public void testGetShortArrayProperty() throws KuraException {
+        givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.SHORT, new Short[] { 1, 2, 3 });
+
+        whenRequestIsPerformed(new MethodSpec("GET"), "/configurableComponents/configurations");
+
+        thenRequestSucceeds();
+        thenTestPropertyTypeIs(Json.value("SHORT"));
+        thenTestPropertyValueIs(Json.array(1, 2, 3));
+    }
+
+    @Test
     public void testGetLongArrayProperty() throws KuraException {
         givenATestConfigurationPropertyWithAdTypeAndValue(Scalar.LONG, new Long[] { 1L, 2L, 3L });
 
@@ -449,7 +466,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateConfigurationBooleanPropertyTrue() throws KuraException {
+    public void testUpdateConfigurationBooleanPropertyTrue() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"BOOLEAN\",\"value\":true}}" + "}" + "]}");
@@ -459,7 +476,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateConfigurationBooleanPropertyFalse() throws KuraException {
+    public void testUpdateConfigurationBooleanPropertyFalse() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"BOOLEAN\",\"value\":false}}" + "}" + "]}");
@@ -469,7 +486,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateByteProperty() throws KuraException {
+    public void testUpdateByteProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"BYTE\",\"value\":15}}" + "}" + "]}");
 
@@ -478,7 +495,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateCharProperty() throws KuraException {
+    public void testUpdateCharProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"CHAR\",\"value\":\"a\"}}" + "}" + "]}");
 
@@ -487,7 +504,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateDoubleProperty() throws KuraException {
+    public void testUpdateDoubleProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"DOUBLE\",\"value\":2.0}}" + "}" + "]}");
 
@@ -496,7 +513,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateFloatProperty() throws KuraException {
+    public void testUpdateFloatProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"FLOAT\",\"value\":2.0}}" + "}" + "]}");
 
@@ -505,7 +522,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateIntegerProperty() throws KuraException {
+    public void testUpdateIntegerPropert() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"INTEGER\",\"value\":123}}" + "}" + "]}");
 
@@ -514,7 +531,16 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateLongProperty() throws KuraException {
+    public void testUpdateShortProperty() {
+        whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
+                + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"SHORT\",\"value\":123}}" + "}" + "]}");
+
+        thenRequestSucceeds();
+        thenReceivedPropertiesForPidContains("foo", "testProp", (short) 123);
+    }
+
+    @Test
+    public void testUpdateLongProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"LONG\",\"value\":123}}" + "}" + "]}");
 
@@ -523,7 +549,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdatePasswordProperty() throws KuraException {
+    public void testUpdatePasswordProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"PASSWORD\",\"value\":\"foobar\"}}" + "}" + "]}");
@@ -533,7 +559,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateStringProperty() throws KuraException {
+    public void testUpdateStringProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"STRING\",\"value\":\"test string\"}}" + "}" + "]}");
@@ -543,7 +569,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateBooleanArrayProperty() throws KuraException {
+    public void testUpdateBooleanArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"BOOLEAN\",\"value\":[false,true,false]}}" + "}"
@@ -554,7 +580,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateByteArrayProperty() throws KuraException {
+    public void testUpdateByteArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"BYTE\",\"value\":[15,12]}}" + "}" + "]}");
@@ -564,7 +590,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateCharArrayProperty() throws KuraException {
+    public void testUpdateCharArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"CHAR\",\"value\":[\"a\",\"b\",\"c\"]}}" + "}" + "]}");
@@ -574,7 +600,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateDoubleArrayProperty() throws KuraException {
+    public void testUpdateDoubleArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"DOUBLE\",\"value\":[2.0,3.0]}}" + "}" + "]}");
@@ -584,7 +610,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateFloatArrayProperty() throws KuraException {
+    public void testUpdateFloatArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"FLOAT\",\"value\":[2.0,4.0]}}" + "}" + "]}");
@@ -594,7 +620,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateIntegerArrayProperty() throws KuraException {
+    public void testUpdateIntegerArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"INTEGER\",\"value\":[1,2,3]}}" + "}" + "]}");
@@ -604,7 +630,17 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateLongArrayProperty() throws KuraException {
+    public void testUpdateShortArrayProperty() {
+        whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
+                "{\"configs\":[" + "{\"pid\":\"foo\","
+                        + "properties: {\"testProp\":{\"type\":\"SHORT\",\"value\":[1,2,3]}}" + "}" + "]}");
+
+        thenRequestSucceeds();
+        thenReceivedPropertiesForPidContainsArray("foo", "testProp", new Short[] { 1, 2, 3 });
+    }
+
+    @Test
+    public void testUpdateLongArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"LONG\",\"value\":[1,2,3]}}" + "}" + "]}");
@@ -614,7 +650,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdatePasswordArrayProperty() throws KuraException {
+    public void testUpdatePasswordArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"PASSWORD\",\"value\":[\"foobar\",\"a\"]}}" + "}"
@@ -625,7 +661,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateStringArrayProperty() throws KuraException {
+    public void testUpdateStringArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"STRING\",\"value\":[\"test string\",\"foo\"]}}" + "}"
@@ -636,7 +672,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateNullProperty() throws KuraException {
+    public void testUpdateNullProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\","
                 + "properties: {\"testProp\":{\"type\":\"STRING\"},\"otherProp\":{\"type\":\"STRING\",\"value\":null}}"
@@ -648,7 +684,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateNullsInArrayProperty() throws KuraException {
+    public void testUpdateNullsInArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"STRING\",value:[null,\"foo\",null]}}" + "}" + "]}");
@@ -658,7 +694,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchNumericProperty() throws KuraException {
+    public void testUpdateTypeMismatchNumericProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"INTEGER\",\"value\":\"foo\"}}" + "}" + "]}");
@@ -668,7 +704,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchStringProperty() throws KuraException {
+    public void testUpdateTypeMismatchStringProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"STRING\",\"value\":12}}" + "}" + "]}");
 
@@ -677,7 +713,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchPasswordProperty() throws KuraException {
+    public void testUpdateTypeMismatchPasswordProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"PASSWORD\",\"value\":12}}" + "}" + "]}");
 
@@ -686,7 +722,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchCharProperty() throws KuraException {
+    public void testUpdateTypeMismatchCharProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"CHAR\",\"value\":12}}" + "}" + "]}");
 
@@ -695,7 +731,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateInvalidLengthCharProperty() throws KuraException {
+    public void testUpdateInvalidLengthCharProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"CHAR\",\"value\":\"foo\"}}" + "}" + "]}");
@@ -705,7 +741,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchNumericArrayProperty() throws KuraException {
+    public void testUpdateTypeMismatchNumericArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"INTEGER\",\"value\":[\"foo\"]}}" + "}" + "]}");
@@ -715,7 +751,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchStringArrayProperty() throws KuraException {
+    public void testUpdateTypeMismatchStringArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"STRING\",\"value\":[12]}}" + "}" + "]}");
 
@@ -724,7 +760,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchPasswordArrayProperty() throws KuraException {
+    public void testUpdateTypeMismatchPasswordArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"PASSWORD\",\"value\":[12]}}" + "}" + "]}");
@@ -734,7 +770,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchCharArrayProperty() throws KuraException {
+    public void testUpdateTypeMismatchCharArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update", "{\"configs\":["
                 + "{\"pid\":\"foo\"," + "properties: {\"testProp\":{\"type\":\"CHAR\",\"value\":[12]}}" + "}" + "]}");
 
@@ -743,7 +779,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateInvalidLengthCharArrayProperty() throws KuraException {
+    public void testUpdateInvalidLengthCharArrayProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"CHAR\",\"value\":[\"foo\"]}}" + "}" + "]}");
@@ -753,7 +789,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
     }
 
     @Test
-    public void testUpdateTypeMismatchBooleanProperty() throws KuraException {
+    public void testUpdateTypeMismatchBooleanProperty() {
         whenRequestIsPerformed(new MethodSpec("PUT"), "/configurableComponents/configurations/_update",
                 "{\"configs\":[" + "{\"pid\":\"foo\","
                         + "properties: {\"testProp\":{\"type\":\"BOOLEAN\",\"value\":\"foo\"}}" + "}" + "]}");
@@ -819,22 +855,34 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
 
     @Test
     public void testGetSnapshotException() throws KuraException {
-        givenMockGetSnapshotReturnException();
+        givenMockGetSnapshotsReturnSome(5);
+        givenMockGetSnapshotReturnException(10000);
 
-        whenRequestIsPerformed(new MethodSpec("POST"), "/snapshots/byId", "{\"id\":12345}");
+        whenRequestIsPerformed(new MethodSpec("POST"), "/snapshots/byId", "{\"id\":10000}");
 
         thenResponseCodeIs(400);
     }
 
     @Test
     public void testGetSnapshot() throws KuraException {
-        givenMockGetSnapshotReturnSome(12345, 5);
+        givenMockGetSnapshotsReturnSome(5);
+        givenMockGetSnapshotReturnSome(10000, 5);
 
-        whenRequestIsPerformed(new MethodSpec("POST"), "/snapshots/byId", "{\"id\":12345}");
+        whenRequestIsPerformed(new MethodSpec("POST"), "/snapshots/byId", "{\"id\":10000}");
 
         thenRequestSucceeds();
         thenResponseBodyEqualsJson("{\"configs\":[" + "{\"pid\":\"pid0\"}," + "{\"pid\":\"pid1\"},"
                 + "{\"pid\":\"pid2\"}," + "{\"pid\":\"pid3\"}," + "{\"pid\":\"pid4\"}]" + "}");
+    }
+
+    @Test
+    public void testGetSnapshotNotFound() throws KuraException {
+        givenMockGetSnapshotsReturnSome(5);
+        givenMockGetSnapshotReturnSome(10000, 5);
+
+        whenRequestIsPerformed(new MethodSpec("POST"), "/snapshots/byId", "{\"id\":12346}");
+
+        thenResponseCodeIs(404);
     }
 
     @Test
@@ -1084,13 +1132,10 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
                 "{\"pids\":[\"foo\"]}");
 
         thenRequestSucceeds();
-        thenResponseElementIs(Json.parse(
-                "{\"pid\":\"foo\",\"definition\":{\"ad\":[{\"option\":[{\"value\":\"foo\"},"
-                        + "{\"label\":\"pass\",\"value\":\"baz\"}],\"id\":\"fooAdName\",\"type\":\"PASSWORD\","
-                        + "\"cardinality\":0,\"isRequired\":false}],\"id\":\"foo\"},"
-                        + "\"properties\":{\"testProp\":{\"value\":[\""
-                        + "placeholder"
-                        + "\"],\"type\":\"PASSWORD\"}}}"),
+        thenResponseElementIs(Json.parse("{\"pid\":\"foo\",\"definition\":{\"ad\":[{\"option\":[{\"value\":\"foo\"},"
+                + "{\"label\":\"pass\",\"value\":\"baz\"}],\"id\":\"fooAdName\",\"type\":\"PASSWORD\","
+                + "\"cardinality\":0,\"isRequired\":false}],\"id\":\"foo\"},"
+                + "\"properties\":{\"testProp\":{\"value\":[\"" + "placeholder" + "\"],\"type\":\"PASSWORD\"}}}"),
                 self().field("configs").arrayItem(0));
     }
 
@@ -1103,8 +1148,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
                                 .withAd(adBuilder("fooAdName", Scalar.STRING) //
                                         .withOption(null, "foo") //
                                         .withOption("pass", "baz") //
-                                        .withDefault("default")
-                                        .build()) //
+                                        .withDefault("default").build()) //
                                 .build()) //
                 .withConfigurationProperties(
                         singletonMap("testProp", new Password[] { new Password(this.encryptedPassword) }))
@@ -1114,13 +1158,12 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
                 "{\"pids\":[\"foo\"]}");
 
         thenRequestSucceeds();
-        thenResponseElementIs(Json.parse(
-                "{\"pid\":\"foo\",\"definition\":{\"ad\":[{\"option\":[{\"value\":\"foo\"},"
+        thenResponseElementIs(
+                Json.parse("{\"pid\":\"foo\",\"definition\":{\"ad\":[{\"option\":[{\"value\":\"foo\"},"
                         + "{\"label\":\"pass\",\"value\":\"baz\"}],\"id\":\"fooAdName\",\"type\":\"STRING\","
                         + "\"cardinality\":0,\"defaultValue\":\"default\",\"isRequired\":false}]"
                         + ",\"id\":\"foo\"},\"properties\":{\"testProp\":{\"value\":[\""
-                        + new String(this.encryptedPassword)
-                        + "\"],\"type\":\"PASSWORD\"}}}"),
+                        + new String(this.encryptedPassword) + "\"],\"type\":\"PASSWORD\"}}}"),
                 self().field("configs").arrayItem(0));
     }
 
@@ -1163,25 +1206,20 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
         super(transport);
         this.cryptoService = WireTestUtil.trackService(CryptoService.class, Optional.empty()).get(30, TimeUnit.SECONDS);
         Mockito.reset(configurationService);
-        Mockito.doAnswer(i -> {
-            Optional.of(i.getArgument(0, List.class));
-            return (Void) null;
-        }).when(configurationService).updateConfigurations(ArgumentMatchers.any());
+
         final Answer<?> configurationUpdateAnswer = i -> {
             this.receivedConfigsByPid.put(i.getArgument(0, String.class), i.getArgument(1, Map.class));
-            return (Void) null;
+            return null;
         };
-        Mockito.doAnswer(configurationUpdateAnswer).when(configurationService).updateConfiguration(
-                ArgumentMatchers.any(),
-                ArgumentMatchers.any());
-        Mockito.doAnswer(configurationUpdateAnswer).when(configurationService).updateConfiguration(
-                ArgumentMatchers.any(),
-                ArgumentMatchers.any(), ArgumentMatchers.anyBoolean());
+        Mockito.doAnswer(configurationUpdateAnswer).when(configurationService)
+                .updateConfiguration(ArgumentMatchers.any(), ArgumentMatchers.any());
+        Mockito.doAnswer(configurationUpdateAnswer).when(configurationService)
+                .updateConfiguration(ArgumentMatchers.any(), ArgumentMatchers.any(), ArgumentMatchers.anyBoolean());
     }
 
     private void thenResponseElementIs(final JsonValue expected, final JsonProjection projection) {
         final JsonValue root = Json
-                .parse(expectResponse().body.orElseThrow(() -> new IllegalStateException("expected body")));
+                .parse(expectResponse().getBody().orElseThrow(() -> new IllegalStateException("expected body")));
         final JsonValue actual;
 
         try {
@@ -1196,7 +1234,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
 
     private void thenResponseElementExists(final JsonProjection projection) {
         final JsonValue root = Json
-                .parse(expectResponse().body.orElseThrow(() -> new IllegalStateException("expected body")));
+                .parse(expectResponse().getBody().orElseThrow(() -> new IllegalStateException("expected body")));
 
         try {
             assertNotNull("response element " + projection + " is null", projection.apply(root));
@@ -1222,7 +1260,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
         when(configurationService.getSnapshots()).thenThrow(new KuraException(KuraErrorCode.CONFIGURATION_ERROR));
     }
 
-    private void givenMockGetFactoryComponentPidsReturnEmpty() throws KuraException {
+    private void givenMockGetFactoryComponentPidsReturnEmpty() {
         when(configurationService.getFactoryComponentPids()).thenReturn(Collections.emptySet());
     }
 
@@ -1234,7 +1272,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
         when(configurationService.getFactoryComponentPids()).thenReturn(components);
     }
 
-    private void givenMockGetConfigurableComponentPidsReturnEmpty() throws KuraException {
+    private void givenMockGetConfigurableComponentPidsReturnEmpty() {
         when(configurationService.getConfigurableComponentPids()).thenReturn(new HashSet<String>());
     }
 
@@ -1367,8 +1405,8 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
         when(configurationService.getDefaultComponentConfiguration(ArgumentMatchers.any())).thenReturn(config);
     }
 
-    private void givenMockGetSnapshotReturnException() throws KuraException {
-        when(configurationService.getSnapshot(12345)).thenThrow(new KuraException(KuraErrorCode.BAD_REQUEST));
+    private void givenMockGetSnapshotReturnException(int snapshotId) throws KuraException {
+        when(configurationService.getSnapshot(snapshotId)).thenThrow(new KuraException(KuraErrorCode.BAD_REQUEST));
     }
 
     private void givenMockGetSnapshotReturnSome(long snapshotId, int howManyConfigurations) throws KuraException {
@@ -1424,8 +1462,7 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
         final Map<String, ComponentConfiguration> byPid = Arrays.stream(configurations)
                 .collect(Collectors.toMap(c -> c.getPid(), c -> c));
 
-        Mockito.when(configurationService.getComponentConfigurations())
-                .thenReturn(byPid.values().stream().collect(Collectors.toList()));
+        Mockito.when(configurationService.getComponentConfigurations()).thenReturn(byPid.values().stream().toList());
 
         Mockito.when(configurationService.getComponentConfiguration(ArgumentMatchers.any())).thenAnswer(i -> {
             final String pid = i.getArgument(0, String.class);
@@ -1437,8 +1474,9 @@ public class ConfigurationRestServiceTest extends AbstractRequestHandlerTest {
             return byPid.get(pid);
         });
 
-        Mockito.when(configurationService.getSnapshot(Mockito.anyLong()))
-                .thenReturn(byPid.values().stream().collect(Collectors.toList()));
+        givenMockGetSnapshotsReturnSome(5);
+
+        Mockito.when(configurationService.getSnapshot(anyLong())).thenReturn(byPid.values().stream().toList());
     }
 
     private void givenATestConfigurationPropertyWithAdTypeAndValue(final Scalar type, final Object value)
